Added support for configMap & persistVolume for slaves

--- a/incubator/mariadb-cluster/templates/master-deploy.yaml
+++ b/incubator/mariadb-cluster/templates/master-deploy.yaml
@@ -132,7 +132,7 @@ spec:
       volumes:
       - name: config
         configMap:
-          name: {{ template "fullname" . }}
+          name: {{ template "master.fullname" . }}
       - name: data
       {{- if .Values.master.persistence.enabled }}
         persistentVolumeClaim:
