--- a/incubator/elasticsearch/templates/ingest-deploy.yaml
+++ b/incubator/elasticsearch/templates/ingest-deploy.yaml
@@ -42,6 +42,12 @@ spec:
                   role: "ingest"
                   release: "{{ .Release.Name }}"
       {{- end }}
+      {{- if .Values.image.pullSecrets }}
+      imagePullSecrets:
+      {{- range .Values.image.pullSecrets }}
+        - name: {{ . }}
+      {{- end}}
+      {{- end }}
       initContainers:
       - name: sysctl
         image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -50,7 +56,7 @@ spec:
         securityContext:
           privileged: true
       containers:
-      - name: "elasticsearch"
+      - name: {{ template "ingest.fullname" . }}
         image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         env:
