--- a/incubator/elasticsearch/templates/role.yaml
+++ b/incubator/elasticsearch/templates/role.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ .Values.serviceAccountName | quote }}
   labels:
     app: {{ template "name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
 rules:
   - apiGroups: [""]
     resources: ["endpoints"]
