--- a/incubator/elasticsearch/templates/rolebinding.yaml
+++ b/incubator/elasticsearch/templates/rolebinding.yaml
@@ -1,16 +1,16 @@
-apiVersion: rbac.authorization.k8s.io/v1betaq
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ .Values.serviceAccountName | quote }}
   labels:
     app: {{ template "name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ template "fullname" . }}
+  name: {{ .Values.serviceAccountName | quote }}
 subjects:
 - kind: ServiceAccount
-  name: {{ template "fullname" . }}
+  name: {{ .Values.serviceAccountName | quote }}
