--- a/incubator/elasticsearch/templates/serviceaccount.yaml
+++ b/incubator/elasticsearch/templates/serviceaccount.yaml
@@ -3,7 +3,7 @@ kind: ServiceAccount
 metadata:
   name: {{ .Values.serviceAccountName | quote }}
   labels:
-    app: {{ template "name" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    release: {{ .Release.Name | quote }}
+    app: {{ template "elasticsearch.name" . | quote }}
+    chart: {{ template "elasticsearch.chart" . | quote }}
     heritage: {{ .Release.Service | quote }}
+    release: {{ .Release.Name | quote }}
