--- a/incubator/elasticsearch/templates/coordinating-svc.yaml
+++ b/incubator/elasticsearch/templates/coordinating-svc.yaml
@@ -1,19 +1,20 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ template "coordinating.fullname" . }}"
+  name: {{ template "coordinating.fullname" . | quote }}
   labels:
-    app: "{{ template "name" . }}"
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    app: {{ template "elasticsearch.name" . | quote }}
+    chart: {{ template "elasticsearch.chart" . | quote }}
+    heritage: {{ .Release.Service | quote }}
+    release: {{ .Release.Name | quote }}
+    role: "coordinating-only"
 spec:
-  type: "{{ .Values.coordinating.service.type }}"
+  type: {{ .Values.coordinating.service.type | quote }}
   ports:
   - name: http
     port: {{ .Values.coordinating.service.port }}
     targetPort: http
   selector:
-    app: "{{ template "name" . }}"
-    release: "{{ .Release.Name }}"
+    app: {{ template "elasticsearch.name" . | quote }}
+    release: {{ .Release.Name | quote }} 
     role: "coordinating-only"
