--- a/incubator/elasticsearch/templates/ingest-svc.yaml
+++ b/incubator/elasticsearch/templates/ingest-svc.yaml
@@ -2,19 +2,20 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ template "ingest.fullname" . }}"
+  name: {{ template "ingest.fullname" . | quote }}
   labels:
-    app: "{{ template "name" . }}"
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    app: {{ template "elasticsearch.name" . | quote }}
+    chart: {{ template "elasticsearch.chart" . | quote }}
+    heritage: {{ .Release.Service | quote }}
+    release: {{ .Release.Name | quote }}
+    role: "ingest"
 spec:
   ports:
   - name: transport
     port: 9300
     targetPort: transport
   selector:
-    app: "{{ template "name" . }}"
-    release: "{{ .Release.Name }}"
+    app: {{ template "elasticsearch.name" . | quote }}
+    release: {{ .Release.Name | quote }}
     role: "ingest"
 {{- end }}
