--- a/incubator/elasticsearch/templates/role.yaml
+++ b/incubator/elasticsearch/templates/role.yaml
@@ -3,10 +3,10 @@ kind: Role
 metadata:
   name: {{ .Values.serviceAccountName | quote }}
   labels:
-    app: {{ template "name" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    release: {{ .Release.Name | quote }}
+    app: {{ template "elasticsearch.name" . | quote }}
+    chart: {{ template "elasticsearch.chart" . | quote }}
     heritage: {{ .Release.Service | quote }}
+    release: {{ .Release.Name | quote }}
 rules:
   - apiGroups: [""]
     resources: ["endpoints"]
