--- a/incubator/elasticsearch/values-production.yaml
+++ b/incubator/elasticsearch/values-production.yaml
@@ -197,7 +197,8 @@ metrics:
   enabled: true
   name: metrics
   image:
-    name: justwatch/elasticsearch_exporter
+    registry: docker.io
+    repository: justwatch/elasticsearch_exporter
     tag: 1.0.1
     pullPolicy: IfNotPresent
   annotations:
