--- a/incubator/elasticsearch/templates/ingest-deploy.yaml
+++ b/incubator/elasticsearch/templates/ingest-deploy.yaml
@@ -2,10 +2,10 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ template "ingest.fullname" . | quote }}
+  name: {{ template "ingest.fullname" . }}
   labels:
-    app: {{ template "elasticsearch.name" . | quote }}
-    chart: {{ template "elasticsearch.chart" . | quote }}
+    app: {{ template "elasticsearch.name" . }}
+    chart: {{ template "elasticsearch.chart" . }}
     heritage: {{ .Release.Service | quote }}
     release: {{ .Release.Name | quote }}
     role: "ingest"
@@ -14,7 +14,7 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ template "elasticsearch.name" . | quote }}
+        app: {{ template "elasticsearch.name" . }}
         release: {{ .Release.Name | quote }}
         role: "ingest"
     spec:
@@ -26,7 +26,7 @@ spec:
             - topologyKey: "kubernetes.io/hostname"
               labelSelector:
                 matchLabels:
-                  app: {{ template "elasticsearch.name" . | quote }}
+                  app: {{ template "elasticsearch.name" . }}
                   release: {{ .Release.Name | quote }}
                   role: "ingest"
       {{- else if eq .Values.ingest.antiAffinity "soft" }}
@@ -38,7 +38,7 @@ spec:
               topologyKey: kubernetes.io/hostname
               labelSelector:
                 matchLabels:
-                  app: {{ template "elasticsearch.name" . | quote }}
+                  app: {{ template "elasticsearch.name" . }}
                   release: {{ .Release.Name | quote }}
                   role: "ingest"
       {{- end }}
@@ -50,14 +50,14 @@ spec:
       {{- end }}
       initContainers:
       - name: sysctl
-        image: {{ template "elasticsearch.image" . | quote }}
+        image: {{ template "elasticsearch.image" . }}
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         command: ["sysctl", "-w", "vm.max_map_count=262144"]
         securityContext:
           privileged: true
       containers:
       - name: {{ template "ingest.fullname" . }}
-        image: {{ template "elasticsearch.image" . | quote }}
+        image: {{ template "elasticsearch.image" . }}
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         env:
         - name: ELASTICSEARCH_CLUSTER_NAME
@@ -108,7 +108,7 @@ spec:
       volumes:
       - name: "config"
         configMap:
-          name: {{ template "elasticsearch.fullname" . | quote }}
+          name: {{ template "elasticsearch.fullname" . }}
       - name: "data"
         emptyDir: {}
 {{- end }}
