--- a/incubator/elasticsearch/templates/coordinating-svc.yaml
+++ b/incubator/elasticsearch/templates/coordinating-svc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "coordinating.fullname" . | quote }}
+  name: {{ template "coordinating.fullname" . }}
   labels:
-    app: {{ template "elasticsearch.name" . | quote }}
-    chart: {{ template "elasticsearch.chart" . | quote }}
+    app: {{ template "elasticsearch.name" . }}
+    chart: {{ template "elasticsearch.chart" . |}}
     heritage: {{ .Release.Service | quote }}
     release: {{ .Release.Name | quote }}
     role: "coordinating-only"
@@ -15,6 +15,6 @@ spec:
     port: {{ .Values.coordinating.service.port }}
     targetPort: http
   selector:
-    app: {{ template "elasticsearch.name" . | quote }}
-    release: {{ .Release.Name | quote }} 
+    app: {{ template "elasticsearch.name" . }}
+    release: {{ .Release.Name | quote }}
     role: "coordinating-only"
