--- a/incubator/elasticsearch/templates/ingest-svc.yaml
+++ b/incubator/elasticsearch/templates/ingest-svc.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "ingest.fullname" . | quote }}
+  name: {{ template "ingest.fullname" . }}
   labels:
-    app: {{ template "elasticsearch.name" . | quote }}
-    chart: {{ template "elasticsearch.chart" . | quote }}
+    app: {{ template "elasticsearch.name" . }}
+    chart: {{ template "elasticsearch.chart" . }}
     heritage: {{ .Release.Service | quote }}
     release: {{ .Release.Name | quote }}
     role: "ingest"
@@ -15,7 +15,7 @@ spec:
     port: 9300
     targetPort: transport
   selector:
-    app: {{ template "elasticsearch.name" . | quote }}
+    app: {{ template "elasticsearch.name" . }}
     release: {{ .Release.Name | quote }}
     role: "ingest"
 {{- end }}
