--- a/incubator/elasticsearch/templates/rolebinding.yaml
+++ b/incubator/elasticsearch/templates/rolebinding.yaml
@@ -3,14 +3,14 @@ kind: RoleBinding
 metadata:
   name: {{ .Values.serviceAccountName | quote }}
   labels:
-    app: {{ template "elasticsearch.name" . | quote }}
-    chart: {{ template "elasticsearch.chart" . | quote }}
+    app: {{ template "elasticsearch.name" . }}
+    chart: {{ template "elasticsearch.chart" . }}
     heritage: {{ .Release.Service | quote }}
     release: {{ .Release.Name | quote }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ .Values.serviceAccountName | quote }}
+  name: {{ .Values.serviceAccountName }}
 subjects:
 - kind: ServiceAccount
-  name: {{ .Values.serviceAccountName | quote }}
+  name: {{ .Values.serviceAccountName }}
