--- a/incubator/mariadb-cluster/templates/master-svc.yaml
+++ b/incubator/mariadb-cluster/templates/master-svc.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ template "master.fullname" . }}
   labels:
     app: "{{ template "name" . }}"
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ template "mariadb.chart" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 {{- if .Values.metrics.enabled }}
