--- a/incubator/mariadb-cluster/templates/slave-configmap.yaml
+++ b/incubator/mariadb-cluster/templates/slave-configmap.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ template "slave.fullname" . }}
   labels:
     app: {{ template "slave.fullname" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ template "mariadb.chart" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 data:
