--- a/incubator/mariadb-cluster/templates/master-configmap.yaml
+++ b/incubator/mariadb-cluster/templates/master-configmap.yaml
@@ -4,7 +4,8 @@ kind: ConfigMap
 metadata:
   name: {{ template "master.fullname" . }}
   labels:
-    app: {{ template "master.fullname" . }}
+    app: {{ template "name" . }}
+    component: "master"
     chart: {{ template "mariadb.chart" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
