--- a/incubator/mariadb-cluster/templates/master-pvc.yaml
+++ b/incubator/mariadb-cluster/templates/master-pvc.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     app: "{{ template "name" . }}"
     chart: {{ template "mariadb.chart" . }}
+    component: "master"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 {{- if .Values.master.persistence.annotations }}
