--- a/incubator/mariadb-cluster/templates/master-svc.yaml
+++ b/incubator/mariadb-cluster/templates/master-svc.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ template "master.fullname" . }}
   labels:
     app: "{{ template "name" . }}"
+    component: "master"
     chart: {{ template "mariadb.chart" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
