--- a/incubator/mariadb-cluster/templates/slave-configmap.yaml
+++ b/incubator/mariadb-cluster/templates/slave-configmap.yaml
@@ -4,7 +4,8 @@ kind: ConfigMap
 metadata:
   name: {{ template "slave.fullname" . }}
   labels:
-    app: {{ template "slave.fullname" . }}
+    app: {{ template "name" . }}
+    component: "slave"
     chart: {{ template "mariadb.chart" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
