--- a/incubator/consul/templates/consul-configmap.yaml
+++ b/incubator/consul/templates/consul-configmap.yaml
@@ -4,10 +4,10 @@ kind: ConfigMap
 metadata:
   name: {{ template "consul.fullname" . }}-configuration
   labels:
-    app: {{ template "consul.name" . }}
+    app: "{{ template "consul.name" . }}"
     chart: {{ template "consul.chart" . }}
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
 data:
   config.json: 
   {{ toYaml .Values.configmap | indent 4}}
