--- a/incubator/consul/templates/consul-service.yaml
+++ b/incubator/consul/templates/consul-service.yaml
@@ -5,8 +5,8 @@ metadata:
   labels:
     app: "{{ template "consul.name" . }}"
     chart: {{ template "consul.chart" . }}
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
   annotations:
     service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
 spec:
@@ -34,5 +34,5 @@ spec:
   {{- end }}  
   selector:
     app: "{{ template "consul.name" . }}"
-    release: "{{ .Release.Name }}"
+    release: {{ .Release.Name | quote }}
 
