--- a/incubator/consul/templates/gossip-secret.yaml
+++ b/incubator/consul/templates/gossip-secret.yaml
@@ -4,10 +4,10 @@ kind: Secret
 metadata:
   name: {{ template "consul.fullname" . }}-gossip-key
   labels:
-    app: {{ template "consul.name" . }}
+    app: "{{ template "consul.name" . }}"
     chart: {{ template "consul.chart" . }}
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
 type: Opaque
 data:
   gossip-key: {{ .Values.gossipKey | b64enc }}
