--- a/incubator/consul/templates/ingress.yaml
+++ b/incubator/consul/templates/ingress.yaml
@@ -7,8 +7,8 @@ metadata:
   labels:
     app: "{{ template "consul.name" . }}"
     chart: {{ template "consul.chart" . }}
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
   annotations:
     {{- if .tls }}
     ingress.kubernetes.io/secure-backends: "true"
