--- a/incubator/consul/templates/ui-service.yaml
+++ b/incubator/consul/templates/ui-service.yaml
@@ -6,8 +6,8 @@ metadata:
   labels:
     app: "{{ template "consul.name" . }}"
     chart: {{ template "consul.chart" . }}
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
 spec:
   ports:
   - name: http
@@ -17,6 +17,6 @@ spec:
   selector:
     app: "{{ template "consul.name" . }}"
     chart: {{ template "consul.chart" . }}
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
 {{- end }}
