--- a/incubator/mariadb-cluster/templates/slave-configmap.yaml
+++ b/incubator/mariadb-cluster/templates/slave-configmap.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.replication.enabled .Values.slave.config}}
+{{- if and .Values.replication.enabled .Values.slave.config }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -12,4 +12,4 @@ metadata:
 data:
   my.cnf: |-
 {{ .Values.slave.config | indent 4 }}
-{{- end -}}
+{{- end }}
