--- a/incubator/mariadb-cluster/templates/slave-statefulset.yaml
+++ b/incubator/mariadb-cluster/templates/slave-statefulset.yaml
@@ -1,26 +1,30 @@
-apiVersion: extensions/v1beta1
-kind: Deployment
+{{- if .Values.replication.enabled }}
+apiVersion: apps/v1beta1
+kind: StatefulSet
 metadata:
-  name: {{ template "master.fullname" . }}
+  name: {{ template "slave.fullname" . }}
   labels:
     app: "{{ template "name" . }}"
     chart: {{ template "mariadb.chart" . }}
-    component: "master"
+    component: "slave"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
-  replicas: 1
+  serviceName: "{{ template "slave.fullname" . }}"
+  replicas: {{ .Values.slave.replicas }}
+  updateStrategy:
+    type: RollingUpdate
   template:
     metadata:
       labels:
         app: "{{ template "name" . }}"
-        component: "master"
+        component: "slave"
         release: "{{ .Release.Name }}"
     spec:
       securityContext:
         runAsUser: 1001
         fsGroup: 1001
-      {{- if eq .Values.master.antiAffinity "hard" }}
+      {{- if eq .Values.slave.antiAffinity "hard" }}
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
@@ -29,7 +33,7 @@ spec:
                 matchLabels:
                   app: "{{ template "name" . }}"
                   release: "{{ .Release.Name }}"
-      {{- else if eq .Values.master.antiAffinity "soft" }}
+      {{- else if eq .Values.slave.antiAffinity "soft" }}
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
@@ -41,16 +45,10 @@ spec:
                   app: "{{ template "name" . }}"
                   release: "{{ .Release.Name }}"
       {{- end }}
-      {{- if .Values.image.pullSecrets }}
-      imagePullSecrets:
-      {{- range .Values.image.pullSecrets }}
-        - name: {{ . }}
-      {{- end}}
-      {{- end }}
       containers:
       - name: "mariadb"
-        image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
+        image: "{{ .Values.image }}"
+        imagePullPolicy: "{{ .Values.pullPolicy }}"
         env:
         - name: MARIADB_ROOT_PASSWORD
           valueFrom:
@@ -68,9 +66,19 @@ spec:
         {{- end }}
         - name: MARIADB_DATABASE
           value: "{{ .Values.db.name }}"
-        {{- if .Values.replication.enabled }}
         - name: MARIADB_REPLICATION_MODE
-          value: "master"
+          value: "slave"
+        - name: MARIADB_MASTER_HOST
+          value: {{ template "master.fullname" . }}
+        - name: MARIADB_MASTER_PORT
+          value: "3306"
+        - name: MARIADB_MASTER_USER
+          value: "root"
+        - name: MARIADB_MASTER_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: {{ template "fullname" . }}
+              key: mariadb-root-password
         - name: MARIADB_REPLICATION_USER
           value: "{{ .Values.replication.user }}"
         - name: MARIADB_REPLICATION_PASSWORD
@@ -78,36 +86,35 @@ spec:
             secretKeyRef:
               name: {{ template "fullname" . }}
               key: mariadb-replication-password
-        {{- end }}
         ports:
         - name: mysql
           containerPort: 3306
-        {{- if .Values.master.livenessProbe.enabled }}
+        {{- if .Values.slave.livenessProbe.enabled }}
         livenessProbe:
           exec:
             command: ["sh", "-c", "exec mysqladmin status -uroot -p$MARIADB_ROOT_PASSWORD"]
-          initialDelaySeconds: {{ .Values.master.livenessProbe.initialDelaySeconds }}
-          periodSeconds: {{ .Values.master.livenessProbe.periodSeconds }}
-          timeoutSeconds: {{ .Values.master.livenessProbe.timeoutSeconds }}
-          successThreshold: {{ .Values.master.livenessProbe.successThreshold }}
-          failureThreshold: {{ .Values.master.livenessProbe.failureThreshold }}
+          initialDelaySeconds: {{ .Values.slave.livenessProbe.initialDelaySeconds }}
+          periodSeconds: {{ .Values.slave.livenessProbe.periodSeconds }}
+          timeoutSeconds: {{ .Values.slave.livenessProbe.timeoutSeconds }}
+          successThreshold: {{ .Values.slave.livenessProbe.successThreshold }}
+          failureThreshold: {{ .Values.slave.livenessProbe.failureThreshold }}
         {{- end }}
-        {{- if .Values.master.readinessProbe.enabled }}
+        {{- if .Values.slave.readinessProbe.enabled }}
         readinessProbe:
           exec:
             command: ["sh", "-c", "exec mysqladmin status -uroot -p$MARIADB_ROOT_PASSWORD"]
-          initialDelaySeconds: {{ .Values.master.readinessProbe.initialDelaySeconds }}
-          periodSeconds: {{ .Values.master.readinessProbe.periodSeconds }}
-          timeoutSeconds: {{ .Values.master.readinessProbe.timeoutSeconds }}
-          successThreshold: {{ .Values.master.readinessProbe.successThreshold }}
-          failureThreshold: {{ .Values.master.readinessProbe.failureThreshold }}
+          initialDelaySeconds: {{ .Values.slave.readinessProbe.initialDelaySeconds }}
+          periodSeconds: {{ .Values.slave.readinessProbe.periodSeconds }}
+          timeoutSeconds: {{ .Values.slave.readinessProbe.timeoutSeconds }}
+          successThreshold: {{ .Values.slave.readinessProbe.successThreshold }}
+          failureThreshold: {{ .Values.slave.readinessProbe.failureThreshold }}
         {{- end }}
         resources:
-{{ toYaml .Values.master.resources | indent 10 }}
+{{ toYaml .Values.slave.resources | indent 10 }}
         volumeMounts:
         - name: data
           mountPath: /bitnami/mariadb
-{{- if .Values.master.config }}
+{{- if .Values.slave.config }}
         - name: config
           mountPath: /opt/bitnami/mariadb/conf/my.cnf
           subPath: my.cnf
@@ -142,13 +149,22 @@ spec:
 {{ toYaml .Values.metrics.resources | indent 10 }}
 {{- end }}
       volumes:
-      - name: config
-        configMap:
-          name: {{ template "master.fullname" . }}
-      - name: data
-      {{- if .Values.master.persistence.enabled }}
-        persistentVolumeClaim:
-          claimName: {{ template "master.fullname" . }}-data
-      {{- else }}
-        emptyDir: {}
-      {{- end -}}
+        - name: config
+          configMap:
+            name: {{ template "slave.fullname" . }}
+
+  volumeClaimTemplates:
+{{- if .Values.slave.persistence.enabled }}
+    - metadata:
+        name: data
+      spec:
+        accessModes:
+        {{- range .Values.slave.persistence.accessModes }}
+          - {{ . | quote }}
+        {{- end }}
+        resources:
+          requests:
+            storage: {{ .Values.slave.persistence.size | quote }}
+        storageClassName: "standard"
+{{- end }}
+{{- end }}
