--- a/incubator/mariadb-cluster/templates/secrets.yaml
+++ b/incubator/mariadb-cluster/templates/secrets.yaml
@@ -6,8 +6,8 @@ metadata:
   labels:
     app: "{{ template "name" . }}"
     chart: {{ template "mariadb.chart" . }}
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    release: {{ .Release.Name | secret }}
+    heritage: {{ .Release.Service | secret }}
 type: Opaque
 data:
   {{- if .Values.root.password }}
